<resources>
    <string name="app_name">FirstTask</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_name">Enter your name.</string>
    <string name="your_email_is">your email is</string>
    <string name="enter_your_email">Enter your email.</string>
    <string name="end_of_section">******</string>
    <string name="choose_a_profile_picture">Let\'s choose a profile picture for you!</string>
    <string name="female">Female</string>
    <string name="or">or</string>
    <string name="male">Male</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_a_full_time_nemployee">Are you a full time\nemployee?</string>
    <string name="choose_your_department">Choose your department</string>
    <string name="view_all_data">View all data? Click here.</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
    <string name="cse">CSE</string>
    <string name="dot">•</string>
    <string name="people">People</string>
    <string name="members">Members</string>
    <string name="nothing_to_show">Nothing to Show!!</string>
    <string name="add">Add</string>
    <string name="zero">0</string>
    <string name="add_a_member">Add a member</string>
    <string name="update_details">Update Details</string>

    <string-array name="dept">
        <item>CSE</item>
        <item>ECE</item>
        <item>IT</item>
        <item>ME</item>
        <item>Other</item>
    </string-array>
</resources>