<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:paddingVertical="2dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_member"
            android:fontFamily="@font/serifdisplay_regular"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/rv_teammates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_bg_black_thin"
            android:contentDescription="@string/add"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toTopOf="@id/rv_teammates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:tint="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_et_bg_black"
        android:fontFamily="@font/serifdisplay_regular"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:letterSpacing="0.03"
        android:drawableTint="@color/red"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_et_bg_black"
        android:fontFamily="@font/serifdisplay_regular"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.03"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_goneMarginTop="5dp" />

    <LinearLayout
        android:id="@+id/ll_full_time_emp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email">

        <TextView
            android:id="@+id/tv_full_time_emp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/serifdisplay_regular"
            android:text="@string/are_you_a_full_time_nemployee"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/no"
            android:src="@drawable/ic_no"
            app:tint="@color/black" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggler_emp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/black"
            app:trackTint="@android:color/darker_gray"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="374dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/yes"
            android:src="@drawable/ic_yes"
            app:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_chooose_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_full_time_emp">

        <TextView
            android:id="@+id/tv_choose_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/serifdisplay_regular"
            android:text="@string/choose_your_department"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dept"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender">

            <AutoCompleteTextView
                android:id="@+id/atcv_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/serifdisplay_regular"
                android:inputType="none"
                android:text="@string/cse"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_chooose_dept">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_radio_button"
            android:button="@android:color/transparent"
            android:drawableStart="@drawable/ic_male"
            android:drawablePadding="8dp"
            android:fontFamily="@font/serifdisplay_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/male"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/serifdisplay_regular"
            android:text="@string/or" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_radio_button"
            android:button="@android:color/transparent"
            android:drawableStart="@drawable/ic_female"
            android:drawablePadding="8dp"
            android:fontFamily="@font/serifdisplay_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/female"
            android:textSize="20sp" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:tint="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>