<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragments.all_members.AllMembersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/serifdisplay_regular"
                android:text="@string/members"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rv_teammates"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_people"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_bg_grey"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/iv_people"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/people"
                    android:src="@drawable/ic_people"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_number_of_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/serifdisplay_regular"
                    android:text="@string/zero"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_people"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_nothing_to_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/serifdisplay_regular"
            android:text="@string/nothing_to_show"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_header" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_teammates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_header"
            tools:listitem="@layout/item_member" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>